updated about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -2,6 +2,8 @@
  <div class="main-content">
     <h3>{{title}}</h3>
     <img class="portrait" src="/images/robot.png" alt="my picture">   
+    <p>This app was built using NodeJS and express. It uses data obtained from 
+      mapbox.com and darksky.net API's</p>
   </div>    
     <p>Page created by {{name}}</p>
 {{>footer}}
